# Auckland-CBD-Pedestrian-Analysis

./: .gitignore  Code.ipynb  GISCI343_A1_He_jhe482.pdf - backup.qmd  GISCI343_A1_He_jhe482.pdf.qmd  GISCI343_A1_He_jhe482.qmd  README.md  jhe482.qmd  main.py  pyproject.toml
data/: akl_ped-2020.csv  akl_ped-2021.csv  akl_ped-2022.csv  akl_ped-2023.csv  akl_ped-2024.csv  akl_ped-2025.csv  akl_ped-Geodata.csv
